update food_service as per auth_service,user_service
